--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,5 +1,12 @@
 .homepage {
-    height: 10vh;
-    width: 100wh;
-    background-color: blue;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cover {
+    height: 80vh;
+    width: 100%;
 }
