--- a/src/components/MenuItems/MenuItems.css
+++ b/src/components/MenuItems/MenuItems.css
@@ -1,16 +1,19 @@
-.menuPage {
-    margin-top: 10px;
+.menu_items {
+    background-color: deepskyblue;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-.menuImage img {
-    margin-top: 50px;
-    height: 330px;
-    width: 330px;
-    background-color: seagreen;
-    cursor: pointer;
+.menu_image {
+    width: 18vw;
+    height: 35vh;
 }
 
+.content {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
