--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,6 +1,7 @@
 .homepage {
     height: 100%;
     width: 100%;
+    padding-bottom: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
