--- a/src/components/MenuItems/MenuItems.css
+++ b/src/components/MenuItems/MenuItems.css
@@ -1,9 +1,9 @@
 .menu_items {
-    background-color: deepskyblue;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px 0px;
 }
 
 .menu_image {
