--- a/src/components/CartIcon/CartIcon.css
+++ b/src/components/CartIcon/CartIcon.css
@@ -14,6 +14,10 @@
     cursor: pointer;
 }
 
+.item_count:active{
+    color: gold;
+}
+
 .item_count{
     position: absolute;
     cursor: pointer;
