--- a/src/components/CartDropdown/CartDropdown.css
+++ b/src/components/CartDropdown/CartDropdown.css
@@ -1,13 +1,21 @@
-.cart-dropdown-container{
+.dropdown-container{
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    padding: 20px;
-    width: 240px;
-    right: 240px;
+    width: 300px;
+    height: 400px;
+    background-color: seagreen;
     top: 30px;
-    height: 240px;
-    z-index: 5;
-    background-color: brown;
+    right: 190px;
+}
+
+.items-container {
+    width: 100%;
+    height: 400px;
+    overflow: auto;
+}
+
+.checkout-button {
+    width: 100%;
+    font-size: 20px;
+    padding: 5px;
+    font-weight: bold;
 }
