--- a/src/components/CartDropdown/CartDropdown.css
+++ b/src/components/CartDropdown/CartDropdown.css
@@ -1,21 +1,39 @@
 .dropdown-container{
     position: absolute;
     width: 300px;
-    height: 400px;
-    background-color: seagreen;
+    height: auto;
+    background-color: #fff;
     top: 30px;
     right: 190px;
+    padding: 10px;
 }
 
 .items-container {
     width: 100%;
-    height: 400px;
+    height: 35vh;
+    overflow: auto;
+}
+
+.empty-items-container {
+    width: 100%;
+    height: 200px;
     overflow: auto;
 }
 
 .checkout-button {
     width: 100%;
     font-size: 20px;
-    padding: 5px;
+    padding: 15px 0px;
+    margin: 10px 0px;
     font-weight: bold;
+}
+
+.total-price {
+    width: 100%;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    background-color: #fff;
+    color: black;
+    border-top: 2.5px solid goldenrod;
 }
