--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -1,8 +1,8 @@
 .cart-item-container {
-    background-color: salmon;
+    background-color: #fff;
     font-weight: 400;
     font-size: 20px;
-    color: #fff;
+    color: black;
     display: grid;
     grid-template-columns: 50% 100px auto;
     padding-bottom: 10px;
@@ -12,4 +12,11 @@
     width: 120px;
     height: 100px;
     border-radius: 3px;
+}
+
+.cart-item-description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
