Add Checkout Page

--- a/src/components/Directory/Directory.css
+++ b/src/components/Directory/Directory.css
@@ -3,5 +3,6 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    background-color: white;
+    background-color: #faf9f8;
+
 }
