--- a/src/pages/LocationPage/LocationPage.css
+++ b/src/pages/LocationPage/LocationPage.css
@@ -6,4 +6,6 @@
     background-image: url("../../assets/location-bg.jpg");
     background-position: 42% 58%;
     background-size: cover;
+    background-color: #faf9f8;
+
 }
