--- a/src/components/CartDropdown/CartDropdown.css
+++ b/src/components/CartDropdown/CartDropdown.css
@@ -22,10 +22,18 @@
 
 .checkout-button {
     width: 100%;
-    font-size: 20px;
-    padding: 15px 0px;
-    margin: 10px 0px;
-    font-weight: bold;
+    background-color:goldenrod;
+    color: white;
+    padding: 18px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.checkout-button:hover{
+    background-color: #fff;
+    border: 3px solid goldenrod;
+    color: black;  
 }
 
 .total-price {
@@ -36,4 +44,6 @@
     background-color: #fff;
     color: black;
     border-top: 2.5px solid goldenrod;
+    display: flex;
+    justify-content: space-between;
 }
