--- a/src/components/OrderItems/OrderItems.css
+++ b/src/components/OrderItems/OrderItems.css
@@ -3,16 +3,17 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 30px;
+    font-size: 1vw;
+    overflow: auto;
 }
 
 .order_image{
     width: 18vw;
-    height: 100%;
+    height: 33vh;
 }
 
 .content {
     height: 100%;
     display: flex;
     flex-direction: column;
-    
 }
