--- a/src/components/CheckoutForm/CheckoutForm.css
+++ b/src/components/CheckoutForm/CheckoutForm.css
@@ -24,7 +24,7 @@
     padding: 10px;
 }
 
-input[type=text], input[type=tel] {
+input[type=text], input[type=tel], input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
