--- a/src/components/MenuDirectory/MenuDirectory.css
+++ b/src/components/MenuDirectory/MenuDirectory.css
@@ -1,3 +1,9 @@
 .menu_directory {
     width: 75vw;
 }
+
+@media only screen and (max-width: 500px) {
+    .menu_directory {
+        width: 100%;
+    }
+}
