--- a/src/components/MenuPreview/MenuPreview.css
+++ b/src/components/MenuPreview/MenuPreview.css
@@ -8,3 +8,10 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
 }
+
+@media only screen and (max-width: 500px) {
+    .preview {
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+    }
+}
