--- a/src/components/OrderPreview/OrderPreview.css
+++ b/src/components/OrderPreview/OrderPreview.css
@@ -4,7 +4,7 @@
 }
 
 .title {
-    padding-bottom: 1rem;
+    padding-bottom: 20px;
 }
 
 .order_preview {
@@ -12,6 +12,13 @@
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 250px;
     column-gap: 2rem;
-    row-gap: 5rem;
+    row-gap: 93.5px;
     padding-bottom: 4rem;
+}
+
+@media only screen and (max-width: 500px) {
+    .order_preview {
+        margin: 0px 5.5px;
+        grid-auto-rows: 390px;
+    }
 }
