--- a/src/components/CartDropdown/CartDropdown.css
+++ b/src/components/CartDropdown/CartDropdown.css
@@ -3,8 +3,8 @@
     width: 300px;
     height: auto;
     background-color: #fff;
-    top: 30px;
-    right: 190px;
+    top: 20px;
+    right: 20px;
     padding: 10px;
 }
 
@@ -16,7 +16,7 @@
 
 .empty-items-container {
     width: 100%;
-    height: 200px;
+    height: 400px;
     overflow: auto;
 }
 
@@ -47,4 +47,12 @@
     border-top: 2.5px solid goldenrod;
     display: flex;
     justify-content: space-between;
+}
+
+@media only screen and (max-width: 1200px) {
+    .dropdown-container {
+        width: 200px;
+        top: 70px;
+        right: 0px;
+    }
 }
