--- a/src/components/CartIcon/CartIcon.css
+++ b/src/components/CartIcon/CartIcon.css
@@ -25,3 +25,18 @@
     font-size: 20px;
     bottom: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+    .shopping_icon {
+        width: 35px;
+        height: 60px;
+    }
+
+    .item_count{
+        position: absolute;
+        cursor: pointer;
+        font-weight: bold;
+        font-size: 20px;
+        bottom: 13.8px;
+    }
+}
