--- a/src/components/CheckoutCartItem/CheckoutCartItem.css
+++ b/src/components/CheckoutCartItem/CheckoutCartItem.css
@@ -28,3 +28,24 @@
 .quantity-style{
     padding: 0px 15px;
 }
+
+@media only screen and (max-width: 1250px) {
+    .checkout-cart-item-container {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    
+    .checkout-cart-item-container img{
+        width: 100px;
+        height: 90px;
+    }
+
+    .checkout-cart-item-description {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        font-size: 5px;
+    }
+}
